--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 
 <body>
-  <h1>Hello world</h1>
 
   <script src="node_modules/underscore/underscore-min.js"></script>
-  <script src="node_modules/backbone/backbone-min.js"></script>
-  
-
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/backbone/backbone.js"></script>
+  <script src="js/todos.js"></script>
 
   </body>
 </html>
