--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/backbone/backbone.js"></script>
   <script src="js/todos.js"></script>
+  <script src="js/models.js"></script>
+  <script src="js/views.js"></script>
 
   </body>
 </html>
