Refactored to use a Collection for the list of Todos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="js/todos.js"></script>
   <script src="js/models.js"></script>
   <script src="js/views.js"></script>
+  <script src="js/collections.js"></script>
 
   </body>
 </html>
