Refactored CSS to use BEM-style names

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body class="body__main">
 
   <script src="node_modules/underscore/underscore-min.js"></script>
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
@@ -17,26 +17,26 @@
   <!-- Templates -->
 
   <script type="text/template" id="main-template">
-    <div class="main-container">
-      <div class="todo-list-container">
-        <h1>ToDo List</h1>
+    <div class="container__main">
+      <div class="container__todos">
+        <h1 class="header__title">ToDo List</h1>
         <div id="app"></div>
       </div>
     </div>
   </script>
 
   <script type="text/template" id="todo-item">
-    <div class="todo-item">
-      <span class="<%= isComplete ? 'complete' : '' %>">
+    <div class="todo__item">
+      <span class="<%= isComplete ? 'todo__title--completed' : '' %>">
         <input type="checkbox" <%= isComplete ? 'checked' : '' %> />
         <%= description %>
       </span>
-      <i class="material-icons clear">clear</i>
+      <i class="material-icons todo__clear-button">clear</i>
     </div>
   </script>
 
   <script type="text/template" id="todo-form">
-    <form class="todo-form">
+    <form class="todo__form">
       <input type="text" id="todoText" />
       <button>Save</button>
     </form>
