Stylistic code refactorings i.e. jQuery selectors changed to classes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container__main">
       <div class="container__todos">
         <h1 class="header__title">ToDo List</h1>
-        <div id="app"></div>
+        <div class="app"></div>
       </div>
     </div>
   </script>
@@ -37,7 +37,7 @@
 
   <script type="text/template" id="todo-form">
     <form class="todo__form">
-      <input type="text" id="todoText" />
+      <input type="text" class="todo__input" />
       <button>Save</button>
     </form>
   </script>
